objects/Project__c.object
<CustomObject>
    <description>A provisioning envelope to hold child records relating to a solution</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPP_Project_Reference__c</fullName>
        <label>CPP Project Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forename__c</fullName>
        <label>Forename</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Billing_Period__c</fullName>
        <label>Project Billing Period</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provisioning_Contact_new__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provisioning Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provisioning_Email_Address__c</fullName>
        <label>Provisioning Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Provisioning_Telephone_Number__c</fullName>
        <label>Provisioning Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Provisioning_Updates_Contact_Name__c</fullName>
        <label>Provisioning Updates Contact Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provisioning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provisioning</label>
        <referenceTo>Provisioning__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Admin_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Admin Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects_SA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects_SC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Surname__c</fullName>
        <label>Surname</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Email__c</fullName>
        <label>Technical Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Name__c</fullName>
        <label>Technical Contact Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Tel__c</fullName>
        <label>Technical Contact Tel</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>Mr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Captain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>